# RepoForgeX

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v0.4.0.md  KABVERSE_CICD_BRAIN.md  LICENSE  MONOREPO_README.md  NEOPLAYER_INTEGRATION.md  README.md  REVOLUTIONARY_FEATURES.md  SUMMARY.md  create-monorepo.sh  docker-compose.yml  pyproject.toml  repos.yml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  monorepo-ci.yml
scripts/: run-tests.sh
src/repoforgex/: __init__.py  __main__.py  ai_features.py  analytics.py  batch_operations.py  cli.py  config.py  events.py  github_client.py  multi_sync.py  scaffold.py  web.py
src/repoforgex/auth/: github_app.py
templates/node-basic/: README.md  package.json
templates/python-basic/: README.md  requirements.txt
tests/: test_ai_features.py  test_analytics.py  test_batch_operations.py  test_config.py  test_events.py  test_scaffold.py  test_web.py
