[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoforgex"
version = "0.2.0"
description = "Automate creation, scaffold and sync many GitHub repos (hardened, Docker, GitHub App)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.7",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "flask>=2.2.5",
  "tenacity>=8.2.2",
  "PyJWT>=2.8.0",
  "pydantic>=1.10.9",
  "python-dotenv>=1.0.0",
]
[project.urls]
"Home" = "https://github.com/kabir308/repoforgex"
